Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Taking advantage of the new centralized CPSI18n.tests.translations module.
- #515: All methods of CPSNavigation.py should have docstrings.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-