@@ -8,6 +8,7 @@ Bug fixes:
 ~~~~~~~~~~
 - Taking advantage of the new centralized CPSI18n.tests.translations module.
 - #515: All methods of CPSNavigation.py should have docstrings.
+- #786: Added empty key 'choose' to navigation_filter_review_state vocabulary.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
